[tool.poetry]
name = "pebba"
version = "0.1.3"
description = "A tool for ORA meta-analysis"
authors = ["Alan Barzilay"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://pebba.sysbio.tools/"
repository = "https://github.com/csbl-br/pebba"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"
plotly = "^5.9.0"
numpy = "^1.23.1"
statsmodels = "^0.13.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
