[metadata]
name = pebba
version = 0.0.1
author = Alan Barzilay
author_email = alan.barzilay@usp.br
description = A tool for ORA meta-analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alan-barzilay/pebba
# project_urls =
#TODO: add site for the online tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
